# ece650-minisat

./: CMakeLists.txt  ece650-minisat.cpp  ex1.cnf  ex2.cnf  ex3.cnf
